# is-fast

./: .all-contributorsrc  .gitattributes  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  flake.nix  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  test.yml
demos/: DEMOS.md
scripts/: is-fast-projects.ps1  is-fast-projects.sh
src/: cli.rs  config.rs  error.rs  extract.rs  extract_formatted.rs  extract_links.rs  fetch.rs  input.rs  lib.rs  main.rs  models.rs  run_search.rs  scrape.rs  syntax_highlighting.rs  ui.rs
src/actions/: direct.rs  generate_config.rs  history.rs  mod.rs  prepare_pages.rs  search.rs  view.rs
src/app/: enum_values.rs  event_loop.rs  history.rs  mod.rs  page.rs  text.rs  tui.rs
src/cli/: command.rs  parser.rs
src/config/: alternate_headers.toml  alternate_useragent.toml  color_conversion.rs  config.toml  constants.rs  default_config.toml  files.rs  format.rs  glob_generation.rs  load.rs  log.rs  mod.rs  raw.rs  site.rs  site_raw.rs  tool_raw.rs  write.rs
src/database/: connect.rs  history_database.rs  mod.rs
src/errors/: error.rs
src/extraction/: cache.rs  format.rs  mod.rs  page.rs  scrape.rs  syntax_highlight.rs
src/formatting/: format.rs  mod.rs  syntax_highlight.rs
src/links/: cache.rs  extract.rs  link.rs  mod.rs
src/logging/: log.rs
src/page/: structure.rs
src/pipe/: history.rs
src/scrapers/: scrape.rs
src/search/: duckduckgo.rs  google.rs  kagi.rs  link.rs  mod.rs  scrape.rs  search_type.rs
src/search_engine/: cache.rs  duckduckgo.rs  google.rs  kagi.rs  link.rs  mod.rs  scrape.rs  search.rs  search_type.rs
src/stout/: pipe.rs
src/transform/: cache.rs  filter.rs  format.rs  link.rs  mod.rs  page.rs  pretty_print.rs  scrape.rs  syntax_highlight.rs
src/tui/: browser.rs  browser_widgets.rs  display.rs  events.rs  general_widgets.rs  history.rs  history_content.rs  history_search.rs  history_widgets.rs  mod.rs  page_content.rs  page_widgets.rs  render.rs
tests/: format_tests.rs
tests/data/: expected_ansi_text.txt  expected_nth.txt  expected_selected.txt  expected_text.txt  invalid_lang_config.toml  sample.html  selector_override_config.toml  test_output_margin_wrap.txt  test_output_title.txt  test_output_title_margin_wrap.txt  unformatted.txt  unformatted_result.txt
wix/: main.wxs
