[package]
name = "is-fast"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/Magic-JD/is-fast"
homepage = "https://github.com/Magic-JD/is-fast"
description = "Internet search fast - view webpages from the terminal."
authors = ["Joseph Daunt"]

[package.metadata.wix]
upgrade-guid = "98558109-78F3-44AC-94BB-270EA47A5129"
path-guid = "1E9BD8F8-FFD2-4F99-B266-C805B17FEAB9"
license = false
eula = false

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.23.1"
thiserror = "2.0.11"
once_cell = "1.20.3"
syntect = "5.2.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
dirs = "6.0.0"
clap = { version = "4.5.31", features = ["derive"] }
open = "5.3.2"
dashmap = "7.0.0-rc1"
globset = "0.4.16"
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = "0.4.40"
nucleo-matcher = "0.3.1"
serde_json = "1.0.139"
atty = "0.2.14"
csv = "1.3.1"
enum_dispatch = "0.3.13"

[build-dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.26"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.17.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
