[package]
name = "is-fast"
version = "0.17.0"
edition = "2021"
repository = "https://github.com/Magic-JD/is-fast"
homepage = "https://github.com/Magic-JD/is-fast"
description = "Internet search fast - view webpages from the terminal."
authors = ["Joseph Daunt"]

[package.metadata.wix]
upgrade-guid = "98558109-78F3-44AC-94BB-270EA47A5129"
path-guid = "1E9BD8F8-FFD2-4F99-B266-C805B17FEAB9"
license = false
eula = false

[dependencies]
brotli = "8.0.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.3.1"
ctor = "0.4.2"
dashmap = "7.0.0-rc2"
dirs = "6.0.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
globset = "0.4.16"
log = "0.4.27"
nu-ansi-term = "0.50.1"
nucleo-matcher = "0.3.1"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12.4"
ratatui = "0.29.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
syntect = "5.2.0"
textwrap = "0.16.2"
thiserror = "2.0.12"
toml = "0.8.23"
ureq = "3.0.11"
zstd = "0.13.3"

[build-dependencies]
clap = { version = "4.5.40", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.27"
clap_complete = "4.5.54"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
